--- a/Task1_Resume_files/resume.html
+++ b/Task1_Resume_files/resume.html
@@ -13,10 +13,8 @@
             <div style="width: 65%;">
                 <h1 style="margin: 0;">UJJAWAL BISHT</h1>
                 <p style="margin: 5px 0;"><strong>Email:</strong> ujjawalbisht@gmail.com</p>
+                <p style="margin: 5px 0;"><strong>Second Email:</strong> ujjawal.bisht@outlook.com</p>
                 <p style="margin: 5px 0;"><strong>Phone:</strong> +91-98XXXXXX19</p>
-                <p style="margin: 5px 0;"><strong>Address:</strong> Laxmi Nagar, East Delhi, 110092</p>
-                <p style="margin: 5px 0;"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ujjawal-bisht" target="_blank">linkedin.com/in/ujjawal-bisht</a></p>
-                <p style="margin: 5px 0;"><strong>GitHub:</strong> <a href="https://github.com/ujjawalbisht" target="_blank">github.com/ujjawalbisht</a></p>
             </div>
             <div style="width: 30%; text-align: right;">
                 <img src="https://www.clipartmax.com/png/middle/236-2365017_ash-ketchum.png" alt="Your Photo" style="border-radius: 50%; width: 150px; height: 150px;">
@@ -153,6 +151,23 @@
                 <li>Active Member of Aeronautics Club</li>
                 <li>Exploring AI, Machine Learning, and Full-Stack Development</li>
                 <li>Participating in Competitive Coding Competitions</li>
+            </ul>
+        </section>
+
+
+        <!-- Personal Details Section -->
+        <section style="margin-top: 20px;">
+            <h2 style="margin-bottom: 10px;">Personal Derails</h2>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>
+                    <p style="margin: 5px 0;"><strong>Address:</strong> Laxmi Nagar, East Delhi, 110092</p>
+                </li>
+                <li>
+                    <p style="margin: 5px 0;"><strong>GitHub:</strong> <a href="https://github.com/ujjawalbisht" target="_blank">github.com/ujjawalbisht</a></p>
+                </li>
+                <li>
+                    <p style="margin: 5px 0;"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ujjawal-bisht" target="_blank">linkedin.com/in/ujjawal-bisht</a></p>
+                </li>
             </ul>
         </section>
 
