--- a/Task4_Webpage_using_CSS/task4_about.html
+++ b/Task4_Webpage_using_CSS/task4_about.html
@@ -6,7 +6,7 @@
     <title>About Section</title>
     <link rel="stylesheet" href="task4.css">
 </head>
-<body>
+<body class="Ba">
     
     <h1 class="Head" id="idk">
         ABOUT ME
