--- a/Task4_Webpage_using_CSS/task4_contact.html
+++ b/Task4_Webpage_using_CSS/task4_contact.html
@@ -6,7 +6,7 @@
     <title>Contact</title>
     <link rel="stylesheet" href="task4.css">
 </head>
-<body>
+<body class="Bc">
     
     <h1 class="Head" id="idk">
         CONTACT
