--- a/Task3_Frame/catalogue.html
+++ b/Task3_Frame/catalogue.html
@@ -4,176 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalogue - College Bookstore</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-        header {
-            background-color: #004080;
-            color: white;
-            padding: 1rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .logo-container {
-            display: flex;
-            align-items: center;
-        }
-        .logo {
-            width: 50px;
-            height: 50px;
-            margin-right: 1rem;
-        }
-        .college-name {
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin-left: 1rem;
-        }
-        .main-container {
-            display: flex;
-            min-height: calc(100vh - 80px);
-        }
-        .sidebar {
-            width: 250px;
-            background-color: #ffffff;
-            padding: 2rem 1rem;
-            box-shadow: 2px 0 10px rgba(0,0,0,0.1);
-        }
-        .sidebar h3 {
-            margin-top: 0;
-            margin-bottom: 1.5rem;
-            color: #004080;
-            text-align: center;
-            font-size: 1.5rem;
-            position: relative;
-            padding-bottom: 10px;
-        }
-        .sidebar h3::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 50px;
-            height: 3px;
-            background-color: #004080;
-        }
-        .sidebar ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        .sidebar li {
-            margin-bottom: 1rem;
-        }
-        .sidebar a {
-            display: block;
-            color: #004080;
-            text-decoration: none;
-            padding: 0.75rem 1rem;
-            background-color: #f0f8ff;
-            border-radius: 5px;
-            transition: all 0.3s ease;
-            text-align: left;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-            position: relative;
-            overflow: hidden;
-        }
-        .sidebar a::before {
-            content: '';
-            position: absolute;
-            left: -100%;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0,64,128,0.1);
-            transition: all 0.3s ease;
-        }
-        .sidebar a:hover::before {
-            left: 0;
-        }
-        .sidebar a:hover {
-            transform: translateX(5px);
-            color: #003366;
-        }
-        .content {
-            flex-grow: 1;
-            padding: 2rem;
-            background: linear-gradient(to bottom right, #ffffff, #e0eafc);
-            box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
-        }
-        .catalogue-header {
-            text-align: center;
-            margin-bottom: 2rem;
-        }
-        .catalogue-header h1 {
-            color: #004080;
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-        }
-        .book-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            gap: 2rem;
-        }
-        .book-card {
-            background-color: #f8f8f8;
-            border-radius: 15px;
-            padding: 1.5rem;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-        .book-card:hover {
-            transform: scale(1.05);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-        }
-        .book-card img {
-            width: 150px;
-            height: 200px;
-            object-fit: cover;
-            border-radius: 10px;
-            margin: 0 auto 1rem;
-        }
-        .book-card h3 {
-            color: #004080;
-            margin-bottom: 0.5rem;
-            font-size: 1.2rem;
-        }
-        .book-card p {
-            color: #666;
-            margin-bottom: 0.5rem;
-            font-size: 0.9rem;
-        }
-        .book-card .price {
-            font-weight: bold;
-            color: #004080;
-            margin-bottom: 1rem;
-        }
-        .book-card button {
-            background-color: #004080;
-            color: white;
-            border: none;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            margin-top: auto;
-            font-size: 1rem;
-        }
-        .book-card button:hover {
-            background-color: #003366;
-        }
-    </style>
+    <link rel="stylesheet" href="main.css">
+
 </head>
 <body>
     <header>
