--- a/Task3_Frame/catalogue.html
+++ b/Task3_Frame/catalogue.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="assets/logo.png" alt="College Logo" class="logo">
+            <img src="assets/ipec_logo.jpg" alt="College Logo" class="logo">
             <div class="college-name">Inderprastha Engineering College Bookstore</div>
         </div>
         <nav>
@@ -26,10 +26,10 @@
             <h3>Engineering Subjects</h3>
             <ul>
                 <li><a href="#">Computer Science</a></li>
-                <li><a href="#">Electrical Engineering</a></li>
                 <li><a href="#">Mechanical Engineering</a></li>
+                <li><a href="#">Electrical Engineering</a></li>
                 <li><a href="#">Civil Engineering</a></li>
-                <li><a href="#">Aerospace Engineering</a></li>
+                <li><a href="#">BioTechnical Engineering</a></li>
             </ul>
         </aside>
 
@@ -41,38 +41,38 @@
 
             <section class="book-grid">
                 <div class="book-card">
-                    <img src="assets/IntroToAlgo.jpg" alt="Introduction to Algorithms" height="200">
+                    <img src="assets/Intro_Algo.jpeg" alt="Introduction to Algorithms" height="200">
                     <h3>Introduction to Algorithms</h3>
-                    <p>by Thomas H. Cormen</p>
-                    <p class="price">₹1900.00</p>
+                    <p>by Michael David</p>
+                    <p class="price">₹1699.00</p>
                     <button>Add to Cart</button>
                 </div>
                 <div class="book-card">
-                    <img src="assets/ElectricCkt.jpg" alt="Electric Circuits" height="200">
-                    <h3>Electric Circuits</h3>
-                    <p>by James W. Nilsson</p>
-                    <p class="price">₹1500.00</p>
+                    <img src="assets/EE.jpg" alt="Electric Circuits" height="200">
+                    <h3>Electric Circuits and Networks</h3>
+                    <p>by K. S. Suresh Kumar</p>
+                    <p class="price">₹1899.00</p>
                     <button>Add to Cart</button>
                 </div>
                 <div class="book-card">
-                    <img src="assets/MechMat.jpg" alt="Mechanics of Materials" height="200">
-                    <h3>Mechanics of Materials</h3>
-                    <p>by Russell C. Hibbeler</p>
-                    <p class="price">₹1720.00</p>
+                    <img src="assets/ME.jpeg" alt="Engineering Mechanics" height="200">
+                    <h3>Engineering Mechanics</h3>
+                    <p>by S.S. Bhavikatti</p>
+                    <p class="price">₹1299.00</p>
                     <button>Add to Cart</button>
                 </div>
                 <div class="book-card">
                     <img src="assets/StructAnal.jpg" alt="Structural Analysis" height="200">
                     <h3>Structural Analysis</h3>
                     <p>by R.C. Hibbeler</p>
-                    <p class="price">₹1280.00</p>
+                    <p class="price">₹1299.00</p>
                     <button>Add to Cart</button>
                 </div>
                 <div class="book-card">
-                    <img src="assets/DataStructAlgo.jpg" alt="Data Structures and Algorithms" height="200">
+                    <img src="assets/DS_c_cpp.jpeg" alt="Data Structures and Algorithms" height="200">
                     <h3>Data Structures and Algorithms</h3>
                     <p>by Michael T. Goodrich</p>
-                    <p class="price">₹1080.00</p>
+                    <p class="price">₹1099.00</p>
                     <button>Add to Cart</button>
                 </div>
                 <div class="book-card">
@@ -90,7 +90,7 @@
                     <button>Add to Cart</button>
                 </div>
                 <div class="book-card">
-                    <img src="assets/fluid.jpg" alt="Fluid Mechanics" height="200">
+                    <img src="assets/FluidD.jpeg" alt="Fluid Mechanics" height="200">
                     <h3>Fluid Mechanics</h3>
                     <p>by Frank M. White</p>
                     <p class="price">₹1500.00</p>
