--- a/Task3_Frame/index.html
+++ b/Task3_Frame/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="assets/logo.png" alt="College Logo" class="logo">
+            <img src="assets/aktu_logo.jpg" alt="College Logo" class="logo">
             <div class="college-name">Inderprastha Engineering College Bookstore</div>
         </div>
         <nav>
@@ -26,10 +26,10 @@
             <h3>Engineering Subjects</h3>
             <ul>
                 <li><a href="#">Computer Science</a></li>
-                <li><a href="#">Electrical Engineering</a></li>
                 <li><a href="#">Mechanical Engineering</a></li>
+                <li><a href="#">Electrical Engineering</a></li>
                 <li><a href="#">Civil Engineering</a></li>
-                <li><a href="#">Aerospace Engineering</a></li>
+                <li><a href="#">BioTechnical Engineering</a></li>
             </ul>
         </aside>
 
