--- a/Task3_Frame/main.html
+++ b/Task3_Frame/main.html
@@ -26,10 +26,10 @@
             <h3>Engineering Subjects</h3>
             <ul>
                 <li><a href="#">Computer Science</a></li>
-                <li><a href="#">Electrical Engineering</a></li>
                 <li><a href="#">Mechanical Engineering</a></li>
+                <li><a href="#">Electrical Engineering</a></li>
                 <li><a href="#">Civil Engineering</a></li>
-                <li><a href="#">Aerospace Engineering</a></li>
+                <li><a href="#">BioTechnical Engineering</a></li>
             </ul>
         </aside>
 
