--- a/Task3_Frame/index.html
+++ b/Task3_Frame/index.html
@@ -35,7 +35,7 @@
 
         <div class="content">
             <section class="welcome-section">
-                <h1>Welcome to IPEC Bookstore</h1>
+                <h1>Welcome to IPEC Online Bookstore</h1>
                 <p>Your one-stop shop for all your academic book needs!</p>
             </section>
 
