--- a/Task3_Frame/catalogue.html
+++ b/Task3_Frame/catalogue.html
@@ -41,56 +41,56 @@
 
             <section class="book-grid">
                 <div class="book-card">
-                    <img src="assets/Intro_Algo.jpeg" alt="Introduction to Algorithms" height="200">
+                    <img src="Images/Intro_Algo.jpeg" alt="Introduction to Algorithms" height="200">
                     <h3>Introduction to Algorithms</h3>
                     <p>by Michael David</p>
                     <p class="price">₹1699.00</p>
                     <button>Add to Cart</button>
                 </div>
                 <div class="book-card">
-                    <img src="assets/EE.jpg" alt="Electric Circuits" height="200">
+                    <img src="Images/EE.jpg" alt="Electric Circuits" height="200">
                     <h3>Electric Circuits and Networks</h3>
                     <p>by K. S. Suresh Kumar</p>
                     <p class="price">₹1899.00</p>
                     <button>Add to Cart</button>
                 </div>
                 <div class="book-card">
-                    <img src="assets/ME.jpeg" alt="Engineering Mechanics" height="200">
+                    <img src="Images/ME.jpeg" alt="Engineering Mechanics" height="200">
                     <h3>Engineering Mechanics</h3>
                     <p>by S.S. Bhavikatti</p>
                     <p class="price">₹1299.00</p>
                     <button>Add to Cart</button>
                 </div>
                 <div class="book-card">
-                    <img src="assets/StructAnal.jpg" alt="Structural Analysis" height="200">
+                    <img src="Images/StructAnal.jpg" alt="Structural Analysis" height="200">
                     <h3>Structural Analysis</h3>
                     <p>by R.C. Hibbeler</p>
                     <p class="price">₹1299.00</p>
                     <button>Add to Cart</button>
                 </div>
                 <div class="book-card">
-                    <img src="assets/DS_c_cpp.jpeg" alt="Data Structures and Algorithms" height="200">
+                    <img src="Images/DS_c_cpp.jpeg" alt="Data Structures and Algorithms" height="200">
                     <h3>Data Structures and Algorithms</h3>
                     <p>by Michael T. Goodrich</p>
                     <p class="price">₹1099.00</p>
                     <button>Add to Cart</button>
                 </div>
                 <div class="book-card">
-                    <img src="assets/SysCtrl_.jpg" alt="Control Systems Engineering" height="200">
+                    <img src="Images/SysCtrl_.jpg" alt="Control Systems Engineering" height="200">
                     <h3>Control Systems Engineering</h3>
                     <p>by Norman S. Nise</p>
                     <p class="price">₹2000.00</p>
                     <button>Add to Cart</button>
                 </div>
                 <div class="book-card">
-                    <img src="assets/thermo.jpg" alt="Thermodynamics: An Engineering Approach" height="200">
+                    <img src="Images/thermo.jpg" alt="Thermodynamics: An Engineering Approach" height="200">
                     <h3>Thermodynamics: An Engineering Approach</h3>
                     <p>by Yunus A. Cengel</p>
                     <p class="price">₹1660.00</p>
                     <button>Add to Cart</button>
                 </div>
                 <div class="book-card">
-                    <img src="assets/FluidD.jpeg" alt="Fluid Mechanics" height="200">
+                    <img src="Images/FluidD.jpeg" alt="Fluid Mechanics" height="200">
                     <h3>Fluid Mechanics</h3>
                     <p>by Frank M. White</p>
                     <p class="price">₹1500.00</p>
