--- a/Task3_Frame/index.html
+++ b/Task3_Frame/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="assets/aktu_logo.jpg" alt="College Logo" class="logo">
+            <img src="Images/aktu_logo.jpg" alt="College Logo" class="logo">
             <div class="college-name">Inderprastha Engineering College Bookstore</div>
         </div>
         <nav>
@@ -84,25 +84,25 @@
                 <h2>Top Picks</h2>
                 <div class="featured-books">
                     <div class="book-card">
-                        <img src="assets/IntroToAlgo.jpg" alt="Introduction to Algorithms" height="200">
+                        <img src="Images/IntroToAlgo.jpg" alt="Introduction to Algorithms" height="200">
                         <h3>Introduction to Algorithms</h3>
                         <p>by Thomas H. Cormen</p>
                         <p class="price">₹1900.00</p>
                     </div>
                     <div class="book-card">
-                        <img src="assets/ElectricCkt.jpg" alt="Electric Circuits" height="200">
+                        <img src="Images/ElectricCkt.jpg" alt="Electric Circuits" height="200">
                         <h3>Electric Circuits</h3>
                         <p>by Charles K. Alexandra</p>
                         <p class="price">₹1500.00</p>
                     </div>
                     <div class="book-card">
-                        <img src="assets/MechMat.jpg" alt="Mechanics of Materials" height="200">
+                        <img src="Images/MechMat.jpg" alt="Mechanics of Materials" height="200">
                         <h3>Mechanics of Materials</h3>
                         <p>by Barry J. Goodno</p>
                         <p class="price">₹1720.00</p>
                     </div>
                     <div class="book-card">
-                        <img src="assets/StructAnal.jpg" alt="Structural Analysis" height="200">
+                        <img src="Images/StructAnal.jpg" alt="Structural Analysis" height="200">
                         <h3>Structural Analysis</h3>
                         <p>by R.C. Hibbeler</p>
                         <p class="price">₹1280.00</p>
