--- a/Task3_Frame/registration.html
+++ b/Task3_Frame/registration.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="assets/logo.png" alt="College Logo" class="logo">
+            <img src="Images/logo.png" alt="College Logo" class="logo">
             <div class="college-name">Inderprastha Engineering College Bookstore</div>
         </div>
         <nav>
