--- a/Task5_Image_Repitation/Task2.html
+++ b/Task5_Image_Repitation/Task2.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lab 5- Task 02</title>
-</head>
-<body>
-        
-</body>
+    <link rel="stylesheet" href="Style.css">
+  </head>
+  <body>
+    <h1>All-in-One Page</h1>
+
+    <section>
+      <h2>Function: Go to Page 1</h2>
+      <p>This link takes you to the Page 1 section on this page.</p>
+      <a href="#page1">Go to Page 1</a>
+    </section>
+
+    <!-- Page Sections -->
+    <div id="page1">
+      <h2>Page 1 Content</h2>
+      <p>Welcome to Page 1. This is the first section of the combined file.</p>
+      <a href="#top">Go to Top</a>
+    </div>
+
+  </body>
 </html>
