--- a/Task2_Form/final_form.html
+++ b/Task2_Form/final_form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration Form</title>
+    <title>Task 02- Registration Form</title>
 </head>
 
 <body style="background-color: #FFF5E1; font-size: large; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0;">
