--- a/Task3_Frame/main.html
+++ b/Task3_Frame/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - College Bookstore</title>
+    <title>Task 04- Home - College Bookstore</title>
     <link rel="stylesheet" href="main.css">
 
 </head>
