--- a/Task5_Image_Repitation/Task2.html
+++ b/Task5_Image_Repitation/Task2.html
@@ -10,17 +10,10 @@
     <h1>All-in-One Page</h1>
 
     <section>
-      <h2>Function: Go to Page 1</h2>
-      <p>This link takes you to the Page 1 section on this page.</p>
-      <a href="#page1">Go to Page 1</a>
+      <h2>Styles for link</h2>
+      <p>To open GOOGLE Website:</p>
+      <a href="https://google.com">Google</a>
     </section>
-
-    <!-- Page Sections -->
-    <div id="page1">
-      <h2>Page 1 Content</h2>
-      <p>Welcome to Page 1. This is the first section of the combined file.</p>
-      <a href="#top">Go to Top</a>
-    </div>
 
   </body>
 </html>
