--- a/Task5_Image_Repitation/main.html
+++ b/Task5_Image_Repitation/main.html
@@ -1,21 +1,9 @@
-<!--
-CSS:
-
-1) Control the repetition of the image with the background-repeat property. 
-2) Define styles for links as 
-    A:link 
-    B:visited 
-    C:active 
-    D:hover
-
--->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab 4</title>
+    <title>Lab 5 Task 1</title>
     <style>
         body {
             background-image: url('1.jpg');
