--- a/Task3_Frame/main.html
+++ b/Task3_Frame/main.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="Images/logo.png" alt="College Logo" class="logo">
+            <img src="Images/ipec_logo.jpg" alt="College Logo" class="logo">
             <div class="college-name">Inderprastha Engineering College Bookstore</div>
         </div>
         <nav>
