--- a/Task3.3_Frame/bottomleft.html
+++ b/Task3.3_Frame/bottomleft.html
@@ -13,5 +13,28 @@
         <li><a href="https://example.com/page4" class="button">Mechanical Engineering</a></li>
         <li><a href="https://example.com/page5" class="button">BioTechnical Engineering</a></li>
     </ul>
+
+    <div class="main-container">
+        <aside class="sidebar">
+            <h3>Engineering Subjects</h3>
+            <ul>
+                <li><a href="#">Computer Science</a></li>
+                <li><a href="#">Mechanical Engineering</a></li>
+                <li><a href="#">Electrical Engineering</a></li>
+                <li><a href="#">Civil Engineering</a></li>
+                <li><a href="#">BioTechnical Engineering</a></li>
+            </ul>
+        </aside>
+
+        <div class="content">
+            <section class="welcome-section">
+                <h1>Welcome to IPEC Bookstore</h1>
+                <p>Your one-stop shop for all your academic book needs!</p>
+            </section>
+
+            <section class="search-bar">
+                <input type="text" placeholder="Search for books, authors, or ISBN...">
+                <button>Search</button>
+            </section>
 </body>
 </html>
