--- a/Task3.3_Frame/topframe.html
+++ b/Task3.3_Frame/topframe.html
@@ -8,18 +8,15 @@
 </head>
 <body bgcolor= #C0C0C0>
     <header>
-        <div class="logo">
-            <img src="Images/ipec_logo.jpg" alt="College Logo" class="logo" height="100" width="100" >
-            <p>Inderprastha Engineering College</p>
+        <div class="logo-container">
+            <img src="Images/ipec_logo.jpg" alt="College Logo" class="logo">
+            <div class="college-name">Inderprastha Engineering College Bookstore</div>
         </div>
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Registration</a></li>
-                <li><a href="#">Catalogue</a></li>
-                <li><a href="#">Cart</a></li>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="login.html">Login</a>
+            <a href="registration.html">Registration</a>
+            <a href="catalogue.html">Catalogue</a>
         </nav>
     </header>
 </body>
