--- a/Task3.3_Frame/topframe.html
+++ b/Task3.3_Frame/topframe.html
@@ -13,9 +13,9 @@
             <div class="college-name">Inderprastha Engineering College Bookstore</div>
         </div>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="login.html">Login</a>
-            <a href="registration.html">Registration</a>
+            <a href="home.html">Home</a>
+            <a href="login_page.html">Login</a>
+            <a href="RegistrationForm.html">Registration</a>
             <a href="catalogue.html">Catalogue</a>
         </nav>
     </header>
