--- a/Task3.3_Frame/RegistrationForm.html
+++ b/Task3.3_Frame/RegistrationForm.html
@@ -6,7 +6,7 @@
     <title>Task 02- Registration Form</title>
     <style>
         body {
-            background-color: #FFF5E1;
+            background-color: #2980b9;
             font-family: Arial, sans-serif;
             font-size: 16px;
             display: flex;
@@ -15,9 +15,18 @@
             height: 100vh;
             margin: 0;
         }
+        .button-container input[type="submit"] {
+          background-color: #4CAF50; /* green */
+          color: #fff;
+        }
+        
+        .button-container input[type="reset"] {
+          background-color: #f44336; /* red */
+          color: #fff;
+        }
 
         .form-container {
-            background-color: #fff;
+            background-color: #5dc0fd;
             padding: 20px;
             border: 2px solid #333;
             border-radius: 8px;
@@ -49,7 +58,7 @@
         textarea {
             width: 100%;
             padding: 10px;
-            border: 1px solid #ccc;
+            border: 1px solid #2980b9;
             border-radius: 4px;
         }
 
