--- a/Task3.3_Frame/bottomleft.html
+++ b/Task3.3_Frame/bottomleft.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <ul class="Lst">
+    <ul class="Lst" style="list-style-type: none;">
         <li><a href="https://example.com/page1" class="button">Computer Science and Engineering</a></li>
         <li><a href="https://example.com/page2" class="button">Electrical Engineering</a></li>
         <li><a href="https://example.com/page3" class="button">Civil Engineering</a></li>
