--- a/Task3.3_Frame/bottomleft.html
+++ b/Task3.3_Frame/bottomleft.html
@@ -3,17 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bottom Left Frame</title>
 </head>
 <body>
-    <ul class="Lst" style="list-style-type: none;">
-        <li><a href="https://example.com/page1" class="button">Computer Science and Engineering</a></li>
-        <li><a href="https://example.com/page2" class="button">Electrical Engineering</a></li>
-        <li><a href="https://example.com/page3" class="button">Civil Engineering</a></li>
-        <li><a href="https://example.com/page4" class="button">Mechanical Engineering</a></li>
-        <li><a href="https://example.com/page5" class="button">BioTechnical Engineering</a></li>
-    </ul>
-
     <div class="main-container">
         <aside class="sidebar">
             <h3>Engineering Subjects</h3>
@@ -26,15 +18,5 @@
             </ul>
         </aside>
 
-        <div class="content">
-            <section class="welcome-section">
-                <h1>Welcome to IPEC Bookstore</h1>
-                <p>Your one-stop shop for all your academic book needs!</p>
-            </section>
-
-            <section class="search-bar">
-                <input type="text" placeholder="Search for books, authors, or ISBN...">
-                <button>Search</button>
-            </section>
 </body>
 </html>
