--- a/Task3.3_Frame/topframe.html
+++ b/Task3.3_Frame/topframe.html
@@ -13,10 +13,10 @@
             <div class="college-name">Inderprastha Engineering College Bookstore</div>
         </div>
         <nav>
-            <a href="home.html">Home</a>
-            <a href="login_page.html">Login</a>
-            <a href="RegistrationForm.html">Registration</a>
-            <a href="catalouge.html">Catalogue</a>
+            <a href="home.html" target="bottomRightFrame">Home</a>
+            <a href="login_page.html" target="bottomRightFrame">Login</a>
+            <a href="RegistrationForm.html" target="bottomRightFrame">Registration</a>
+            <a href="catalouge.html" target="bottomRightFrame">Catalogue</a>
         </nav>
     </header>
 </body>
