--- a/Task3.3_Frame/main.html
+++ b/Task3.3_Frame/main.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Take 03- Home</title>
+    <title>Take 03- Main</title>
 </head>
 <frameset rows="10%, *">
     <frame name="topleftFrame" src="topframe.html">
     <frameset cols="25%, *">
         <frame name="BottomLeftFrame" src="bottomleft.html">
-        <frame name="bottomRightFrame" src="#">
+        <frame name="bottomRightFrame" src="bottomright.html" >
     </frameset>
 </frameset>
 </html>
-
