--- a/Task3.3_Frame/topframe.html
+++ b/Task3.3_Frame/topframe.html
@@ -3,21 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Frame</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Top 1  Frame</title>
+    <link rel="stylesheet" href="topframe.css">
 </head>
-<body bgcolor= #C0C0C0>
+<body style="background: linear-gradient(to right, #3498db, #2980b9);">
     <header>
+    <div>
         <div class="logo-container">
-            <img src="Images/ipec_logo.jpg" alt="College Logo" class="logo">
-            <div class="college-name">Inderprastha Engineering College Bookstore</div>
+            <img src="Images/ipec_logo.jpg" alt="College Logo" class="logo" height="100" width="100" >
+            <h1 class="college-name">Inderprastha Engineering College</h1>
         </div>
         <nav>
-            <a href="home.html" target="bottomRightFrame">Home</a>
-            <a href="login_page.html" target="bottomRightFrame">Login</a>
-            <a href="RegistrationForm.html" target="bottomRightFrame">Registration</a>
-            <a href="catalouge.html" target="bottomRightFrame">Catalogue</a>
+            <ul>
+                <li><a href="home.html" target="bottomRightFrame">Home</a></li>
+                <li><a href="login_page.html" target="bottomRightFrame">Login</a></li>
+                <li><a href="RegistrationForm.html" target="bottomRightFrame">Registration</a></li>
+                <li><a href="catalouge.html" target="bottomRightFrame">Catalogue</a></li>
+            </ul>
         </nav>
+    </div>
     </header>
 </body>
 </html>
