--- a/Task3.3_Frame/bottomleft.html
+++ b/Task3.3_Frame/bottomleft.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bottom Left Frame</title>
+    <link rel="stylesheet" href="bottomleft.css">
 </head>
-<body bgcolor="#2a8ef9">
+<body>
     <div class="main-container">
         <aside class="sidebar">
             <h3>Engineering Subjects</h3>
@@ -17,6 +18,6 @@
                 <li><a href="#">BioTechnical Engineering</a></li>
             </ul>
         </aside>
-
+    </div>
 </body>
 </html>
